# compositor

./: .clang-format  .gitignore  CMakeLists.txt  PROCESS_AND_CHOICES.md  README.md
include/: tiled_window_manager.h
scripts/: launch.sh
src/: main.cpp  tiled_window_manager.cpp
tests/: CMakeLists.txt
